--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,13 @@
 
 <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <head>
-    <!-- Meta tags -->
+    <!-- Meta tags are here -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <!-- Boostrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    
+
     <!-- Main CSS -->
     <link rel="stylesheet" href="{% static 'main.css' %}" />
 
@@ -33,7 +33,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-        
+
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
@@ -46,19 +46,19 @@
 
     <!-- Main content container -->
     <div class="content-container">
-      
+
       <!-- Text container -->
       <div class="text-container">
 
-        
+
         <div class="tagline" id="HomeTitle">Where Journeys Meet <br>and Friends Are Made!</div>
-        
+
         <p class="description" id="HomeSubTitle">
           Hitch-Ride's software enables people attending the same event<br>
           and living nearby to easily find and share rides, fostering a<br>
           community of convenient and eco-friendly travel.
         </p>
-        
+
         <a href="/rides" class="button" id="HomeButton">Schedule Now!</a>
       </div>
 
