--- a/templates/base.html
+++ b/templates/base.html
@@ -24,24 +24,33 @@
 
 <title> ORF 401: Spring 2024 </title>
 
-    <!-- Navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white mb-5" style="min-height: 50px;">
-      <div class="container-fluid">
-        <!-- Text instead of logo image -->
-        <a class="navbar-brand" href="/" style="font-weight: bold; font-size: 1.5rem;">Hitch-Ride</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="/rides/about">About Us</a>
-            </li>
-          </ul>
-        </div>
+  <!-- Navigation bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white mb-5" style="min-height: 50px;">
+    <div class="container-fluid">
+      <!-- Text instead of logo image -->
+      <a class="navbar-brand" href="/" style="font-weight: bold; font-size: 1.5rem;">Hitch-Ride</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="/rides">Search Ride</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/rides/create">Create Ride</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="/rides/about">About Us</a>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
+
 
 
     <center>
