--- a/rides/templates/create.html
+++ b/rides/templates/create.html
@@ -2,13 +2,16 @@
 
 {% block content %}
 
-<form action="{% url 'rides:create' %}" method="post" class="form-bottom-padding">
+<form action="{% url 'rides:create' %}" method="post">
     {% csrf_token %}
     {{ new_ride_form }}
-    <button type="submit" value="Submit" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-        Submit
-    </button>
+    <div class="form-bottom-padding">
+        <button type="submit" value="Submit" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+            Submit
+        </button>
+    </div>
 </form>
+
 
 
 {% endblock %}
