--- a/rides/templates/create.html
+++ b/rides/templates/create.html
@@ -2,16 +2,17 @@
 
 {% block content %}
 
+
 <form action="{% url 'rides:create' %}" method="post">
     {% csrf_token %}
     {{ new_ride_form }}
-    <div class="form-bottom-padding">
-        <button type="submit" value="Submit" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-            Submit
-        </button>
-    </div>
+    <button type="submit" value="Submit" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+        Submit
+    </button>
 </form>
 
+<!-- Blank spacer div -->
+<div style="height: 50px;"></div> <!-- Adjust the height as needed -->
 
 
 {% endblock %}
