--- a/rides/templates/index_view.html
+++ b/rides/templates/index_view.html
@@ -53,15 +53,15 @@
     </br>
 </br>
 </br>
-    
-    
-
-<!-- 
-    <button type="submit" class="btn btn-primary" onclick="return checkForm()">
-        <i class="fas fa-search"></i> Submit
-    </button> -->
     </form>
 </div> 
+
+<form id="ai" class="menu-item"  method="post" action="{% url 'rides:ai_interaction' %}">
+    {% csrf_token %}
+    <input type="text" name="user_input">
+    <button type="submit" value="Submit">Submit</button>
+    </form>
+    
 
 
 {% endblock %}
