--- a/rides/templates/ai_interaction.html
+++ b/rides/templates/ai_interaction.html
@@ -39,5 +39,8 @@
             </div>
         {% endif %}
     </div>
+    <!-- Blank spacer div -->
+<div style="height: 100px;"></div> <!-- Adjust the height as needed -->
 </body>
+
 </html>
