--- a/templates/index.html
+++ b/templates/index.html
@@ -25,24 +25,32 @@
   </head>
   <body>
 
-    <!-- Navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white mb-5" style="min-height: 50px;">
-        <div class="container-fluid">
-          <!-- Text instead of logo image -->
-          <a class="navbar-brand" href="/" style="font-weight: bold; font-size: 1.5rem;">Hitch-Ride</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="/rides/about">About Us</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <!-- Navigation bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white mb-5" style="min-height: 50px;">
+    <div class="container-fluid">
+      <!-- Text instead of logo image -->
+      <a class="navbar-brand" href="/" style="font-weight: bold; font-size: 1.5rem;">Hitch-Ride</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="/rides">Search Ride</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/rides/create">Create Ride</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="/rides/about">About Us</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
     <!-- Main content container -->
     <div class="content-container">
@@ -51,12 +59,10 @@
       <div class="text-container">
 
 
-        <div class="tagline" id="HomeTitle">Where Journeys Meet <br>and Friends Are Made!</div>
+        <div class="tagline" id="HomeTitle">Where Journeys Meet and Friends Are Made!</div>
 
         <p class="description" id="HomeSubTitle">
-          Hitch-Ride's software enables people attending the same event<br>
-          and living nearby to easily find and share rides, fostering a<br>
-          community of convenient and eco-friendly travel.
+          Hitch-Ride's software enables people attending the same event and living nearby to easily find and share rides, fostering a community of convenient and eco-friendly travel.
         </p>
 
         <a href="/rides" class="button" id="HomeButton">Schedule Now!</a>
