--- a/rides/templates/about.html
+++ b/rides/templates/about.html
@@ -24,24 +24,32 @@
 
 <title> ORF 401: Spring 2024 </title>
 
-    <!-- Navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white mb-5" style="min-height: 50px;">
-      <div class="container-fluid">
-        <!-- Text instead of logo image -->
-        <a class="navbar-brand" href="/" style="font-weight: bold; font-size: 1.5rem;">Hitch-Ride</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="/rides/about">About Us</a>
-            </li>
-          </ul>
-        </div>
+  <!-- Navigation bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white mb-5" style="min-height: 50px;">
+    <div class="container-fluid">
+      <!-- Text instead of logo image -->
+      <a class="navbar-brand" href="/" style="font-weight: bold; font-size: 1.5rem;">Hitch-Ride</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="/rides">Search Ride</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/rides/create">Create Ride</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="/rides/about">About Us</a>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
 
     <center>
@@ -61,7 +69,7 @@
 
 
         <div class="tagline" id="HomeTitle">Aneesh Tekulapally</div>
-        <img src="{% static 'aneesh.jpg' %}" alt="Image of logo" style="width: 400px; height: 400px;">
+        <div class="image-container" id="Aneesh"> </div>
         <p class="description" id="HomeSubTitle">
           Aneesh is a senior at Princeton University studying Operations Research and Financial Engineering. He is passionate about using technology to solve real-world problems and is excited to be working on Hitch-Ride. In his free time, Aneesh enjoys playing basketball and watching movies.
         </p>
@@ -71,7 +79,7 @@
 
 
         <div class="tagline" id="HomeTitle">Jimmy Chen</div>
-        <img src="{% static 'jimmy.jpg' %}" alt="Image of logo" style="width: 400px; height: 400px;">
+        <div class="image-container" id="Jimmy"> </div>
         <p class="description" id="HomeSubTitle">
           Jimmy is a senior at Princeton University studying Operations Research and Financial Engineering. He is passionate about using technology to solve real-world problems and is excited to be working on Hitch-Ride. In his free time, Jimmy enjoys playing basketball and watching movies.
         </p>
@@ -80,6 +88,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
+  <div style="height: 100px;"></div> <!-- Adjust the height as needed -->
   <div class="footer">
     &copy; 2024 Hitch-Ride. All rights reserved.
   </div>
